test/error/error.input042.zc
Unknown variable or function:fred on line 3
